--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,29 @@
-ul li {
-  list-style-type: georgian;
+.app-wrapper {
+  width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-rows: 60px 1fr;
+  grid-template-columns: 2fr 10fr;
+  /*grid-gap: 10px;*/
+  grid-template-areas:
+    "header header"
+    "nav content";
+}
+
+.header {
+  grid-area: header;
+  background-color: green;
+}
+.header img {
+  width: 20px;
+}
+
+.nav {
+  grid-area: nav;
+  background-color: burlywood;
+}
+
+.content {
+  grid-area: content;
+  background: cornflowerblue;
 }
