--- a/src/App.css
+++ b/src/App.css
@@ -7,23 +7,5 @@
   /*grid-gap: 10px;*/
   grid-template-areas:
     "header header"
-    "nav content";
-}
-
-.header {
-  grid-area: header;
-  background-color: green;
-}
-.header img {
-  width: 20px;
-}
-
-.nav {
-  grid-area: nav;
-  background-color: burlywood;
-}
-
-.content {
-  grid-area: content;
-  background: cornflowerblue;
+    "nav c";
 }
